<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="General">

        <group android:checkableBehavior="single">

            <item
                android:id="@+id/news_feed"
                android:icon="@drawable/newsfeed"
                android:title="@string/neewsFeed" />

            <item
                android:id="@+id/agregar"
                android:icon="@drawable/agregar"
                android:title="@string/request" />

        </group>

    </item>


    <item android:title="@string/myAccount">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/person"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/my_activities"
                    android:icon="@drawable/my_activities"
                    android:title="@string/myFeed" />

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />

            </group>

        </menu>

    </item>


</menu>